--- a/FillWords.Phone.8.0/FillWords.Phone.8.0.csproj
+++ b/FillWords.Phone.8.0/FillWords.Phone.8.0.csproj
@@ -15,8 +15,7 @@
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
     <SilverlightApplication>true</SilverlightApplication>
-    <SupportedCultures>
-    </SupportedCultures>
+    <SupportedCultures>ru-RU</SupportedCultures>
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
     <XapFilename>FillWords.Phone._8._0_$(Configuration)_$(Platform).xap</XapFilename>
@@ -101,18 +100,23 @@
       <DependentUpon>GameViewPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Helpers\PopupMessage.cs" />
+    <Compile Include="Helpers\StoreHelper.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="CategoryPage.xaml.cs">
       <DependentUpon>CategoryPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="LogicGame\Category.cs" />
     <Compile Include="Helpers\ColorsHelper.cs" />
+    <Compile Include="LogicGame\Coordinate.cs" />
     <Compile Include="LogicGame\Dimension.cs" />
     <Compile Include="LogicGame\GameView.cs" />
     <Compile Include="LogicGame\Level.cs" />
     <Compile Include="LogicGame\Word.cs" />
     <Compile Include="LogicGame\WordMatrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchasesPage.xaml.cs">
+      <DependentUpon>PurchasesPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\GameViewRepository.cs" />
     <Compile Include="Repositories\WordRepository.cs" />
@@ -132,6 +136,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CategoryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PurchasesPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -195,6 +203,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\AppResources.ru-RU.resx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="AppPromo.WP8, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
