--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\FillWords.Phone.7.1\packages.config" />
   <repository path="..\FillWords.Phone.8.0\packages.config" />
+  <repository path="..\IT.FillWords.Phone.7.1\packages.config" />
+  <repository path="..\IT.FillWords.Phone.8.0\packages.config" />
 </repositories>
