Added admob ads to RU project

--- a/FillWords.Phone.8.0/FillWords.Phone.8.0.csproj
+++ b/FillWords.Phone.8.0/FillWords.Phone.8.0.csproj
@@ -89,6 +89,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Advertising\AdsMob.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -186,6 +187,7 @@
     <Content Include="Images\menu\Lifebuoy-50-magenta.png" />
     <Content Include="Images\menu\Like Filled-50-magenta.png" />
     <Content Include="Images\menu\Money Bag-50-magenta.png" />
+    <Content Include="Images\menu\Price Tag USD-50-magenta.png" />
     <Content Include="Images\menu\Share-50-magenta.png" />
     <Content Include="README_FIRST.txt" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
@@ -211,6 +213,9 @@
     </Reference>
     <Reference Include="Coding4Fun.Toolkit.Controls">
       <HintPath>..\packages\Coding4Fun.Toolkit.Controls.2.1.7\lib\windowsphone8\Coding4Fun.Toolkit.Controls.dll</HintPath>
+    </Reference>
+    <Reference Include="GoogleAds">
+      <HintPath>..\..\Google SDK for Windows Phone\GoogleMobileAdsSdkWindowsPhone8-6.5.13\lib\windowsphone8\GoogleAds.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=8.0.1.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL">
       <HintPath>..\packages\WPtoolkit.4.2013.08.16\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
